# stipant

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: main.ts  simple-grid.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/stipant/: mod.rs
src-tauri/src/stripant/: mod.rs
